--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #16e0bd;
+    --clr-accent: #0CB7C3;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -72,6 +72,31 @@ h3 {
     font-size: var(--fs-h3);
 }
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+/* Buttons */
+
+.btn {
+    display: inline-block;
+    padding: 0.5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.2);
+}
+
 /* Typography */
 
 .section__title {
@@ -112,13 +137,15 @@ nav {
 
 /*  Intro Section */
 
+.intro {
+    position: relative;
+    background-color: #B9FFBE;
+}
+
 .section__subtitle--intro {
     display: inline-block;
 }
 
-.intro {
-    position: relative;
-}
 
 .intro__img {
     box-shadow: var(--bs);
@@ -127,8 +154,8 @@ nav {
 @media (min-width: 600px) {
     .intro {
         display: grid;
-        width: min-content;
-        margin: 0 auto;
+        justify-items: center;
+        justify-content: center;
         grid-column-gap: 1em;
         grid-template-areas:
             "img title"
@@ -154,27 +181,35 @@ nav {
     }
 }
 
-/* My services Section */
+/* About Me */
 
-.my-services {
-    background-color: var(--clr-dark);
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../images/dev.jpg'); /* dimming effect */
-    background-size: cover;
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.section__title--services {
-    color: var(--clr-accent);
+.about-me {
+    margin: auto;
+    justify-items: center;
+    justify-content: center;
+    max-width: 80%;
+    display: grid;
+    grid-template-rows: 1fr 8fr;
     position: relative;
 }
 
-.section__title--services::after {
-    content: '';
-    display: block;
-    position: center;
-    width: 25%;
-    height: 1px;
-    margin: 0.53m auto 1em;
-    background: currentColor;
+.section_title--about {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+}
+
+
+.about-me__body{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column-gap: 1cm;
+}
+
+.about-me__body--text {
+
+    grid-column: 4 / 7;
+}
+
+.about.me__vertical-menu {
+    grid-column: 7 / 8;
 }
