--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@
     --fw-bold: 900;
 
     --clr-light: #fff;
+    --clr-main-light: #f5faf5;
     --clr-dark: #303030;
-    --clr-accent: #0CB7C3;
+    --clr-accent: #0cb7c3;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -124,31 +125,145 @@ strong {
 
 .section__subtitle--intro,
 .section__subtitle--about {
-    background: var(--clr-accent);
     font-family: var(--ff-code);
     padding: 0.25em 1em;
     margin-bottom: 1.5em;
 }
 
-/* header */
+/* Nav Bar */
+
+.all-nav {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+    background-color: var(--clr-light);
+}
+
+.logo {
+    color: var(--clr-dark);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 20px;
+    margin-left: 15px;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    width: 35%;
+}
+
+.nav-links a {
+    color: black;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+}
+
+.burger {
     display: none;
+    margin-right: 15px;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+    .nav-links {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .body {
+        overflow-x: hidden;
+    }
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        bottom: 0px;
+        height: 100vh;
+        top: 25px;
+        background-color: var(--clr-light);
+        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .nav-links li {
+        opacity: 0;
+    }
+
+    .nav-links li:hover {
+        text-decoration: underline;
+        transform: scale(1.2);
+    }
+
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
 
 /*  Intro Section */
 
 .intro {
     position: relative;
-    background-color: #B9FFBE;
+    background-color: var(--clr-main-light);
+    border-top: 0.5px solid #c4c4c4;
+    border-bottom: 0.5px solid #c4c4c4;
 }
 
 .section__subtitle--intro {
-    display: inline-block;
-}
 
+}
 
 .intro__img {
     box-shadow: var(--bs);
+    border-radius: 5%;
 }
 
 @media (min-width: 600px) {
@@ -184,32 +299,113 @@ nav {
 /* About Me */
 
 .about-me {
-    margin: auto;
+    margin: auto auto;
+    padding: 50px 30px;
     justify-items: center;
     justify-content: center;
     max-width: 80%;
     display: grid;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 2fr;
     position: relative;
 }
 
-.section_title--about {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
+.section__title--about {
+    justify-self: stretch;
+    align-self: stretch;
+    text-align: center;
+    max-height: 30px;
+    padding: 0 0;
+    margin-bottom: 0;
 }
 
+.section__title--about::after {
+    content: "";
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background-color: black;
+}
 
-.about-me__body{
+.about-me__body {
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-column-gap: 1cm;
+    grid-template-columns: 4fr 1fr;
 }
 
 .about-me__body--text {
-
-    grid-column: 4 / 7;
+    font-family: var(--ff-code);
+    max-width: 500px;
+    font-size: 1em;
 }
 
-.about.me__vertical-menu {
-    grid-column: 7 / 8;
+.about-me__vertical-menu {
+    padding-top: 1.3em;
+    margin-left: 0.5em;
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.vertical-menu-item {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    max-height: 30px;
+    text-align: center;
+}
+
+.mailto {
+    display: block;
+    align-items: left;
+}
+
+.icon {
+    padding-right: 0.5em;
+}
+
+/* Footer */
+
+.footer {
+    border-top: 0.5px solid #c4c4c4;
+    background: var(--clr-main-light);
+    color: #0cb7c3;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.footer p {
+    margin: 0 10px;
+    font-size: 1em;
+    color: gray;
+    padding: 0 0;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    align-self: center;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin-right: 1.2em;
+    align-self: center;
+}
+
+.social-list__link {
+    padding: 0.5em;
+    color: black;
+}
+
+.social-list__link:hover {
+    color: gray;
 }
