--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -48,17 +48,23 @@
         </div>
         <!-- Introduction  -->
         <section class="intro" id="home">
-            <h1 class="section__title section__title--intro">
-                Hi, I'm <strong>Minkyu Song</strong>
-            </h1>
-            <p class="section_subtitle section__subtitle--intro">
-                Computer Engineer
-            </p>
-            <img
-                class="intro__img"
-                src="../images/my_main_pic.jpeg"
-                alt="A picture of me"
-            />
+            <div class="intro-item image-cropper circle square-100 border">
+                <img
+                    class="intro__img"
+                    src="../images/my_main_pic.jpeg"
+                />
+            </div>
+            <div class="intro-item page-title">
+                <h1 class="section__title section__title--intro">
+                    Minkyu Song
+                </h1>
+            </div>
+            <div class="intro-item">
+                <h2 class="section_subtitle section__subtitle--intro">
+                    4th Year Computer Engineering Student at <br/> the University of British Columbia.
+                </h2>
+            </div>
+            
         </section>
 
         <!-- About Me -->
@@ -69,11 +75,12 @@
             <div class="about-me__body">
                 <div class="about-me__body--text">
                     <p>
-                        The computer wouldn't start. She banged on the side and
-                        tried again. Nothing. She lifted it up and dropped it to
-                        the table. Still nothing. She banged her closed fist
-                        against the top. It was at this moment she saw the irony
-                        of trying to fix the machine with violence.
+                        Hello, it's very nice to meet you. My name is Minkyu Song but I usually go by Jason. 
+                        Thanks for visiting btw! To tell you a little bit about myself, I love all-things-tech,
+                        watching sports, gaming, <br/> e-sports, etc. I also love solving complex problems with simple, 
+                        elegant code. I must say, I still have a lot to learn in the space of technology but that 
+                        makes me super excited. And for that, I am so grateful and I can't wait to learn all about them. 
+                        
                     </p>
                 </div>
                 <div class="about-me__vertical-menu">
